fix white spaces in posts and improve colors

--- a/themes/basic/assets/css/_home.scss
+++ b/themes/basic/assets/css/_home.scss
@@ -1,59 +1,59 @@
 @import "vars";
 
 .home {
-  .home-head {
-    text-align: center;
-    margin: 1rem 0;
-    padding: 1rem 0;
+    .home-head {
+        text-align: center;
+        margin: 1rem 0;
+        padding: 1rem 0;
 
-    h1 {
-      margin: 1rem 0;
-      font-size: 3.5em;
+        h1 {
+            margin: 1rem 0;
+            font-size: 3.5em;
+        }
+        label {
+            font-size: 0.8em;
+            color: #414141;
+        }
     }
-    label {
-      font-size: 0.8em;
-      color: #414141;
+
+    .animation-gopher {
+        margin: auto;
+        max-width: 150px;
+        width: 80%;
     }
-  }
 
-  .animation-gopher {
-    margin: auto;
-    max-width: 150px;
-    width: 80%;
-  }
+    .content {
+        padding: 1rem 0;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        flex-wrap: wrap;
 
-  .content {
-    padding: 1rem 0;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    flex-wrap: wrap;
+        .box-section {
+            flex-basis: calc(30% - 4rem);
+            margin: 1rem;
+            text-decoration: none;
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+            padding: 1rem;
+            color: #7c1ad2;
 
-    .box-section {
-      flex-basis: calc(30% - 4rem);
-      margin: 1rem;
-      text-decoration: none;
-      display: flex;
-      flex-direction: column;
-      text-align: center;
-      padding: 1rem;
-      color: #7c1ad2;
+            &:hover {
+                background-color: #8cc5e7;
 
-      &:hover {
-        background-color: $second-color;
+                b { color: white }
+            }
 
-        b { color: white }
-      }
-
-      b { color: #313131 }
+            b { color: #313131 }
+        }
     }
-  }
 }
 
 @media (max-width: #{$display-mid-max}) {
-  .home .content .box-section {
-    flex-basis: calc(100% - 4rem);
-  }
+    .home .content .box-section {
+        flex-basis: calc(100% - 4rem);
+    }
 }
 
 
